I'm ready to call this 0.9 and start looking for victims^Wtesters.